--- a/detail-artikel.html
+++ b/detail-artikel.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Kontak</title>
 
-    <!-- css -->
-    <link rel="stylesheet" href="assets/css/about.css">
+
+        <!-- css -->
+    <link rel="stylesheet" href="assets/css/artikel.css">
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -30,7 +31,7 @@
 
 </head>
 <body class="bg-light">
-
+    
     <!-- header -->
     <section class="header" id="header">
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -50,7 +51,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="about.html">Tentang</a>
                         </li>
                         <li class="nav-item">
@@ -59,7 +60,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="artikel.html">Artikel</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
                         <li class="nav-item">
@@ -71,89 +72,15 @@
         </nav>
     </section>
 
-    <!-- about -->
-    <section class="about" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 desc">
-                    <h3>Tentang MI At-Taqwa</h3>
-                    <p>MI AT - TAQWA Bondowoso adalah Lembaga Pendidikan favorit dikota Bondowoso dengan menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah. Madrasah kami pun turut menjaga tradisi lama yang baik dan mengambil perkembangan baru yang lebih baik.</p>
-                    <a href="#" class="btn btn-success">Selengkapnya <i class="fa fa-arrow-right"></i> </a>
-                </div>
-                <div class="col-lg-8 col-md-6 col-sm-12 img">
-                    <div class="img-one img-fluid">
-                        <img src="assets/img/about1.png" alt="" class="img-fluid">
-                        <div class="youtube">
-                            <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
-                                <img src="assets/img/play.png" alt="" class="img-fluid"/>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="img-two img-fluid">
-                        <img src="assets/img/about2.png" alt="" class="img-fluid">
-                    </div>
-                    <div class="arrow text-right">
-                        <a href="#"><i class="fa fa-arrow-left left"></i></a>           
-                        <a href="#"><i class="fa fa-arrow-right right"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- fasilitas -->
-    <section class="fasilitas" id="fasilitas">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 top">
-                    <div class="media">
-                    <img src="assets/img/fas-about-1.png" class="mr-3" alt="..." class="img-fluid">
-                        <div class="media-body">
-                            <h5 class="mt-3 mb-0">Gedung 2 Lantai</h5>
-                            <p class="mt-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 top">
-                    <div class="media">
-                    <img src="assets/img/fas-about-2.png" class="mr-3" alt="..." class="img-fluid">
-                        <div class="media-body">
-                        <h5 class="mt-3 mb-0">Asrama Santri</h5>
-                        <p class="mt-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12">
-                    <div class="media">
-                    <img src="assets/img/fas-about-3.png" class="mr-3" alt="..." class="img-fluid">
-                        <div class="media-body">
-                        <h5 class="mt-3 mb-0">Tempat Wudhu 2 Lantai</h5>
-                        <p class="mt-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12">
-                    <div class="media">
-                    <img src="assets/img/fas-about-4.png" class="mr-3" alt="..." class="img-fluid">
-                        <div class="media-body">
-                        <h5 class="mt-3 mb-0">Gedung 2 Lantai</h5>
-                        <p class="mt-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
+
 
 
     <!-- footer -->
     <section class="footer" id="footer">
         <p >© 2020, Madrasah Ibtidaiyah At-Taqwa, All rights reserved. Developed by <span>Inagata Technosmith</span></p>
     </section>
-    
-
-
-
 
 
     <!-- bootstrap js -->
@@ -170,5 +97,6 @@
 
     <!-- slick -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+
 </body>
 </html>
