--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                             <a class="nav-link" href="about.html">Tentang</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Galeri</a>
+                            <a class="nav-link" href="galeri.html">Galeri</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Artikel</a>
+                            <a class="nav-link" href="artikel.html">Artikel</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Kontak</a>
+                            <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
