--- a/detail-artikel.html
+++ b/detail-artikel.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontak</title>
+    <title>Artikel-Detail</title>
 
 
         <!-- css -->
-    <link rel="stylesheet" href="assets/css/artikel.css">
+    <link rel="stylesheet" href="assets/css/artikel-detail.css">
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -57,10 +57,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="galeri.html">Galeri</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="artikel.html">Artikel</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
                         <li class="nav-item">
@@ -73,9 +73,91 @@
     </section>
 
 
+    <!-- hero -->
+    <section class="hero" id="hero">
+        <img src="assets/img/hero.png" alt="">
+    </section>
 
 
+    <!-- detail -->
+    <section class="detail" id="detail">
+        <div class="container">
+            <div class="row">
+                <div class="badge badge-success">24 Maret<br><span>2020</span></div>
+                <h2>Bersiwak dalam pandangan <br> agama dan medis</h2>
+            </div>
+            <div class="row sosial">
+                <small class="user"><i class="fas fa-user mr-2"></i> Azam Najib</small>
+                <img src="assets/img/facebook.png" alt="">
+                <img src="assets/img/twitter.png" alt="">
+                <img src="assets/img/link.png" alt="">
+            </div>
+            <div class="desc">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet,</p>
+                <img src="assets/img/artikel_detail.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+            </div>
+        </div>
+    </section>
 
+    <section class="detail-card" id="detail-card">
+        <div class="container">
+            <h2>Artikel Menarik Lainnya</h2>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card mb-3">
+                        <img src="assets/img/card1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <small class="text-muted mt-0">2020-01-21 16:02:03</small><br>
+                            <a href="detail-page.html" class="card-title">Menggabungkan Puasa Rajab dan Puasa Qadla</a>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur.</p>
+                            <a href="detail-page.html" class="card-link">Selengkapnya</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card mb-3">
+                        <img src="assets/img/card2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <small class="text-muted">2020-01-21 16:02:03</small><br>
+                            <a href="detail-page.html" class="card-title">Etika Mencari Rizqi</a>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id justo pretium, efficitur velit id, gravida massa.</p>
+                            <a href="detail-page.html" class="card-link">Selengkapnya</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card mb-3">
+                        <img src="assets/img/card3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <small class="text-muted">2020-01-21 16:02:03</small><br>
+                            <a href="detail-page.html" class="card-title">Pentingnya Kebersihan</a>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id justo pretium, efficitur velit.</p>
+                            <a href="detail-page.html" class="card-link">Selengkapnya</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card mb-3">
+                        <img src="assets/img/card4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <small class="text-muted">2020-01-21 16:02:03</small><br>
+                            <a href="detail-page.html" class="card-title">Amalan 10 Hari Akhir Ramadhan</a>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fugiat.</p>
+                            <a href="detail-page.html" class="card-link">Selengkapnya</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 button">
+                    <button class="btn btn-success btn-block">Tampilkan Lebih</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
 
     <!-- footer -->
     <section class="footer" id="footer">
