--- a/galeri.html
+++ b/galeri.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeri</title>
+    <title>Galleri</title>
 
 
         <!-- css -->
